<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Anahuac</string>
    <string name="hint_email_or_phone_number">Email or phone number</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Button</string>
    <string name="txt_help">Need Help?</string>
    <string name="txt_signup">Sign Up</string>
    <string name="txt_title_practices">Practices</string>
    <string name="txt_login_facebook">Login Facebook</string>
    <string name="txt_login_wfacebook">Login With Facebook</string>
    <string name="txt_new">New to Netflix?</string>
    <string name="txt_signup_now">Sign up now.</string>
    <string name="txt_campus">Campus List</string>
    <string name="txt_ver_mas">Ver más</string>
    <string name="txt_recycler_campus">Recycler View</string>
    <string name="txt_login_netflix" tools:ignore="ExtraTranslation">Login Netflix</string>
    <string name="txt_anahuac_cancun" tools:ignore="ExtraTranslation">Universidad Anáhuac - Cancún</string>
    <string name="txt_alert">¡Alerta!</string>
    <string name="txt_alert_wButton">Alerta con botónes</string>
    <string name="txt_alert_wList">Alerta con lista</string>
    <string name="txt_Login">LOGIN</string>
    <string name="txt_Email">EMAIL</string>
    <string name="txt_Password">PASSWORD</string>
    <string name="txt_EmailMockup">randomusername@bestmail.org</string>
    <string name="txt_forgot_password">FORGOT PASSWORD?</string>
</resources>