<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_fb">
![](../../../../../../../../Pictures/fblogo.png)
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_logo"
        android:src="@drawable/fblogo"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toTopOf="@+id/card_view_inputs"
        android:layout_marginBottom="@dimen/margin_default"
        app:tint="@color/white"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:cardCornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/gl_center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_margin="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email_or_phone_number"
                android:background="@null"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@android:color/darker_gray"/>

            <EditText
                android:layout_margin="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:background="@null"/>

        </LinearLayout>





    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:layout_marginHorizontal="@dimen/margin_default"
        app:layout_constraintTop_toBottomOf="@id/gl_center"
        android:backgroundTint="@color/secondary_fb"
        />

    <TextView
        android:text="@string/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txt_help"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/margin_default"/>

    <TextView
        android:id="@+id/txt_help"
        android:text="@string/txt_help"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/margin_default"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>