<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivityNetflix">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/netflixLogo"
        android:layout_width="@dimen/width_logo"
        android:layout_height="@dimen/height_logo"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top"
        android:src="@drawable/netflix_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="@dimen/margin_default"
        android:text="Sign In"
        android:textColor="@color/white"
        android:textSize="@dimen/sign_in_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/card_view_email" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:backgroundTint="@color/gray"
        app:cardCornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/card_view_password">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:background="@null"
            android:hint="@string/hint_email_or_phone_number"
            android:textColorHint="@color/grayLight" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:backgroundTint="@color/gray"
        app:cardCornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/gl_center">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:background="@null"
            android:hint="@string/hint_password"
            android:textColorHint="@color/grayLight" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/red"
        android:padding="@dimen/margin_default"
        android:text="Sign In"
        app:layout_constraintTop_toBottomOf="@id/gl_center" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signInButton"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember me"
        android:textColor="@color/grayLight"
        app:layout_constraintStart_toEndOf="@id/checkbox"
        app:layout_constraintTop_toBottomOf="@id/signInButton" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/txt_help"
        android:textColor="@color/grayLight"
        app:layout_constraintBottom_toBottomOf="@id/checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/checkbox" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04"/>

    <ImageView
        android:id="@+id/facebookFavicon"
        android:layout_width="@dimen/favicon"
        android:layout_height="@dimen/favicon"
        android:src="@drawable/facebookfavicon"
        app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
        app:layout_constraintTop_toTopOf="@id/gl_bottom"
        app:layout_constraintStart_toEndOf="@+id/gl_vertical"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login_wfacebook"
        android:textColor="@color/grayLight"
        app:layout_constraintStart_toEndOf="@+id/gl_vertical"
        app:layout_constraintTop_toTopOf="@id/gl_bottom"
        app:layout_constraintBottom_toBottomOf="@+id/gl_bottom"
        android:textSize="@dimen/subtitle"
        android:layout_marginStart="@dimen/margin_default"
        android:paddingStart="@dimen/margin_default"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_farBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90"
        />

    <EditText
        android:id="@+id/txt_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_new"
        android:textColor="@color/grayLight"
        app:layout_constraintTop_toTopOf="@id/gl_farBottom"
        app:layout_constraintStart_toEndOf="@id/gl_farBottom"
        android:textSize="@dimen/subtitle"
        android:paddingStart="@dimen/margin_default"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_signup_now"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/gl_farBottom"
        app:layout_constraintStart_toEndOf="@id/txt_new"
        android:textSize="@dimen/subtitle"

        android:textStyle="bold"
        />



</androidx.constraintlayout.widget.ConstraintLayout>